--- a/Front-End-Admin/src/app/livre/livre.component.html
+++ b/Front-End-Admin/src/app/livre/livre.component.html
@@ -48,9 +48,9 @@
                 <button class="btn btn-md btn-success css-btn">
                   <i class="fa fa-eye"></i>
                 </button>
-                <button class="btn btn-md btn-danger css-btn">
+                <!--<button class="btn btn-md btn-danger css-btn">
                   <i class="fa fa-trash"></i>
-                </button>
+                </button>-->
               </td>
             </tr>
             </tbody>
@@ -59,7 +59,7 @@
           <div class="text-center pagination">
             <ul   *ngIf="pages" class="pagination">
               <li [ngClass]="i==currentPage? 'active':''" *ngFor="let p of pages; let i=index"  class="clickable">
-                <a (click)="onPageProduct(i)"> {{i}}</a>
+                <a (click)="onPageProduct(i)"> {{i+1}}</a>
               </li>
             </ul>
           </div>
