--- a/Front-End-User/src/app/sing-in/sing-in.component.html
+++ b/Front-End-User/src/app/sing-in/sing-in.component.html
@@ -16,37 +16,35 @@
                                                     <p style="color: white;">If You Don't have an account, please
                                                         <a style="color: #ff7236 !important;" routerLink="../singup">Registre</a></p>
                                                 </div>
-                                                <form class="login" method="post">
+                                                <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
                                                     <p class="form-row form-row-first input-required">
                                                         <label>
                                                             <span class="first-letter">Mail Adresse</span>
                                                             <span class="second-letter">*</span>
                                                         </label>
-                                                        <input type="email" id="email" name="email" class="input-text">
+                                                        <input formControlName="email" type="email" class="input-text">
                                                     </p>
                                                     <p class="form-row form-row-first input-required">
                                                         <label>
                                                             <span class="first-letter">Password</span>
                                                             <span class="second-letter">*</span>
                                                         </label>
-                                                        <input type="password" id="password" name="password"
-                                                            class="input-text">
+                                                        <input type="password" formControlName="password" class="input-text">
                                                     </p>
                                                     <div class="clear"></div>
-                                                    <div class="password-form-row">
-                                                        <p class="form-row input-checkbox">
+                                                    <!-- <div class="password-form-row"> -->
+                                                        <!-- <p class="form-row input-checkbox">
                                                             <input type="checkbox" value="forever" id="rememberme"
                                                                 name="rememberme">
                                                             <label class="inline" for="rememberme">Remember me</label>
-                                                        </p>
+                                                        </p> -->
                                                         <!-- <p class="lost_password">
                                                             <a href="#" style="color: #ff7236;">Lost your Password?</a>
                                                         </p> -->
-                                                    </div>
-                                                    <input type="submit" value="Enter" name="signup"
-                                                        class="button btn btn-default">
+                                                    <!-- </div> -->
+                                                    <input type="submit" [disabled]="signInForm.invalid" class="button btn btn-default">
                                                     <div class="clear"></div>
-                                                </form>
+                                               </form>
                                             </div>
                                         </div>
                                     </div>
