--- a/Front-End-User/src/app/sing-up/sing-up.component.html
+++ b/Front-End-User/src/app/sing-up/sing-up.component.html
@@ -17,35 +17,39 @@
                                                         <a style="color: #ff7236 !important;" routerLink="../singin">Log In</a>
                                                     </p>
                                                 </div> 
-                                                <form class="login" method="post">
+                                                <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
                                                     <p class="form-row form-row-first input-required">
                                                         <label>
                                                             <span class="first-letter">First Name</span>  
                                                             <span class="second-letter">*</span>
                                                         </label>
-                                                        <input type="text" id="username1" name="username" class="input-text" style="background-color: white;border-color: lightgrey;">
+                                                        <input type="text" formControlName="first_name"  class="input-text" style="background-color: white;border-color: lightgrey;">
                                                     </p>
                                                     <p class="form-row form-row-first input-required">
                                                         <label>
                                                             <span class="first-letter">Last Name</span>  
                                                             <span class="second-letter">*</span>
                                                         </label>
-                                                        <input type="text" id="username1" name="username" class="input-text" style="background-color: white;border-color: lightgrey;">
+                                                        <input type="text" formControlName="last_name" class="input-text" style="background-color: white;border-color: lightgrey;">
                                                     </p>
                                                     <p class="form-row form-row-first input-required">
                                                         <label>
                                                             <span class="first-letter">Mail Adresse</span>  
                                                             <span class="second-letter">*</span>
                                                         </label>
-                                                        <input type="email" id="email" name="email" class="input-text" style="background-color: white;border-color: lightgrey;">
+                                                        <span class="second-letter" *ngIf="emailValid()"> Email exists deja!</span>
+                                                        <input type="email" formControlName="email"  class="input-text" style="background-color: white;border-color: lightgrey;">
                                                     </p>
-                                                    <p class="form-row input-required">
-                                                        <input type="date" id="date" name="password" class="form-control" style="background-color: white;border-color: lightgrey;">
-                                                    </p>                                                                                
+                                                    <p class="form-row form-row-first input-required">
+                                                        
+                                                        <input type="password" formControlName="password" class="input-text" placeholder="Passsowrd (min 6 caracters or number)" style="background-color: white;border-color: lightgrey;">
+                                                    </p>
+                                                                                                                        
                                                     <div class="clear"></div>
-                                                    <input type="submit" value="Validate" name="signup" class="button btn btn-default">
+                                                    <input type="submit"
+                                                    [disabled]="signupForm.invalid" class="button btn btn-default">
                                                     <div class="clear"></div>
-                                                </form> 
+                                                </form>  
                                             </div>
                                         </div>
                                     </div>
