--- a/Front-End-User/src/app/profil/profil.component.html
+++ b/Front-End-User/src/app/profil/profil.component.html
@@ -6,17 +6,17 @@
             <h3><i class="icon-material-outline-account-circle"></i> My Account</h3>
         </div>
 
-        <div class="content with-padding padding-bottom-0">
+        <div class="content with-padding padding-bottom-0" *ngIf="isAuth()">
 
             <div class="row">
 
-                <div class="col-auto" style="padding-left:3% ;">
+                <!-- <div class="col-auto" style="padding-left:3% ;">
                     <div class="avatar-wrapper" data-tippy-placement="bottom" title="Change Avatar">
                         <img class="profile-pic" src="../../assets/images/team-img-06.jpg" alt="" />
                         <div class="upload-button"></div>
                         <input class="file-upload" type="file" accept="image/*" />
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col" style="padding-left: 10%;
                 padding-right: 5%;">
@@ -25,20 +25,20 @@
                         <div class="col-xl-6 col-md-6">
                             <div class="submit-field">
                                 <h5>First Name</h5>
-                                <input type="text" class="with-border" value="Tom">
+                                <input type="text" class="with-border" value="{{first_name}}">
                             </div>
                         </div>
 
                         <div class="col-xl-6 col-md-6">
                             <div class="submit-field">
                                 <h5>Last Name</h5>
-                                <input type="text" class="with-border" value="Smith">
+                                <input type="text" class="with-border" value="{{last_name}}">
                             </div>
                         </div>
                         <div class="col-xl-6 col-md-12">
                             <div class="submit-field">
                                 <h5>Email</h5>
-                                <input type="text" class="with-border" value="tom@example.com">
+                                <input type="text" class="with-border" value="{{mail}}">
                             </div>
                         </div>
 
