--- a/Front-End-Admin/src/app/categorie/categorie.component.html
+++ b/Front-End-Admin/src/app/categorie/categorie.component.html
@@ -5,7 +5,6 @@
         <div class="col-md-12">
           <div id="accordion" class="accordion-wrapper mb-3">
             <div class="card card-btn">
-
               <a class="btn btn-primary btn-lg btn-ajouter-categorie" data-toggle="modal" data-target="#categorieModal">
                 Ajouter Une Categorie
               </a>
@@ -31,14 +30,15 @@
               <th class="text-center">Action</th>
             </tr>
             </thead>
-            <tbody>
-            <tr class="td-table" *ngFor="let l of categories.content">
-              <td class="text-center">1</td>
+            <tbody *ngIf="NotEmpty">
+            <tr class="td-table" *ngFor="let l of categories.content; let i = index" [attr.data-index]="i">
+              <td class="text-center">{{i+1}}</td>
               <td class="text-center">{{l.title}}</td>
               <td class="text-center" *ngIf="l.active == 1">oui</td>
               <td class="text-center" *ngIf="l.active == 0">non</td>
               <td class="text-center">
-                <button class="btn btn-md btn-info css-btn">
+                <button class="btn btn-md btn-info css-btn" data-toggle="modal" 
+                (click)="onUpdateCategory(l.id_category)" data-target="#categorieModalupdate">
                   <i class="fas fa-edit"></i>
                 </button>
                 <!--<button class="btn btn-md btn-success css-btn">
@@ -82,7 +82,7 @@
       <div class="modal-body">
         <div class="position-relative row form-group">
           <label for="exampleEmail" class="col-sm-3 col-form-label">Nom De Catégorie :</label>
-          <div class="col-sm-9"><input name="name" id="exampleName" placeholder="saisir le nom de la Catégorie" type="text" class="form-control  input-livre"></div>
+          <div class="col-sm-9"><input name="name" id="categorie" placeholder="saisir le nom de la Catégorie" type="text" class="form-control  input-livre"></div>
         </div>
 
         <div class="position-relative row form-group">
@@ -98,6 +98,46 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
         <button type="button" class="btn btn-primary">Sauvegarder</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="modal fade modal" id="categorieModalupdate" tabindex="0" role="dialog" aria-labelledby="categorieModalUpdate" style="" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content" *ngIf="categoryUpdated">
+      <div class="modal-header">
+        <h5 class="modal-title" id="categorieModalLabel">Modifier Catégorie</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true" class="modal-x">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="position-relative row form-group">
+          <label for="exampleEmail" class="col-sm-3 col-form-label">Nom De Catégorie :</label>
+          <div class="col-sm-9">
+            <input name="name" 
+                  [value]="categoryUpdated!= 'undefined'?categoryUpdated.title:''" 
+                  id="categorie_up" placeholder="saisir le nom de la Catégorie" 
+                  type="text" class="form-control  input-livre"
+                  (input)="categoryUpdated.title = $event.target.value">
+          </div>
+        </div>
+
+        <div class="position-relative row form-group">
+          <label for="exampleEmail" class="col-sm-3 col-form-label">Disponibilité :</label>
+          <div class="col-sm-9  input-livre ">
+            <select class="select-disponible" (change)="availabilityChange($event.target.value)">
+              <option [value]="1" [selected]="categoryUpdated.active==1?true:''" >Disponible</option>
+              <option [value]="0" [selected]="categoryUpdated.active==0?true:''">Occupé</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="saveCategory()">Modifier</button>
       </div>
     </div>
   </div>
