--- a/Front-End-User/src/app/book-list/book-list.component.html
+++ b/Front-End-User/src/app/book-list/book-list.component.html
@@ -17,37 +17,35 @@
                 </div>
             </div>
         </div>
-        <div class="books-list">
-            <article>
-                <div class="single-book-box">
-                    <div class="post-thumbnail">
+        <div class="books-list" *ngIf="livres">
+            <article *ngFor="let l of livres.content" >
+                <div class="single-book-box" *ngIf="l.category.id_category == currentCategorie.id_category && l?.available == 1 let empty='' ; else let empty='yes'">
+                    <div class="post-thumbnail" let i=index>
                         <!-- <div class="book-list-icon yellow-icon"></div> -->
-                        <a href="books-media-detail-v1.html"><img alt="Book"
+                        <a href="#"><img alt="Book"
                                 src="../../assets/images/books-media/list-view/book-media-01.jpg" /></a> </div>
                     <div class="post-detail">
                         <header class="entry-header">
                             <div class="row">
                                 <div class="col-sm-6">
                                     <h3 class="entry-title">
-                                        <a href="books-media-detail-v1.html">The Great Gatsby</a>
+                                        <a href="#">{{l.title}}</a>
                                     </h3>
                                     <ul>
-                                        <li><strong>Author:</strong> F. Scott Fitzgerald</li>
-                                        <li><strong>ISBN:</strong> 9781581573268</li>
+                                        <li><strong>Author:</strong> {{l.author}}</li>
+                                        <li><strong>Date:</strong> {{l.date_publication}}</li>
                                     </ul>
                                 </div>
                                 <div class="col-sm-6">
                                     <ul>
-                                        <li><strong>Edition:</strong> First editio</li>
-                                        <li><strong>Local Availability:</strong> 0 (of 1)</li>
+                                        <li><strong>Edition:</strong> {{l.edition}}</li>
+                                        <li><strong>Local Availability:</strong>{{l.quantite}}</li>
                                     </ul>
                                 </div>
                             </div>
                         </header>
                         <div class="entry-content">
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                                suffered alteration in some form, by injected humour, or randomised words which don't
-                                look even slightly believable.</p>
+                            <p>{{l.description}}</p>
                         </div>
                         <footer class="entry-footer">
                             <a class="btn btn-dark-gray" href="books-media-detail-v1.html">Reserve</a>
@@ -57,64 +55,24 @@
                 </div>
             </article>
         </div>
-        <nav class="navigation pagination text-center">
+        <nav  class="navigation pagination text-center">
             <h2 class="screen-reader-text">Posts navigation</h2>
             <div class="nav-links">
-                <a class="prev page-numbers" href="#."><i class="fa fa-long-arrow-left"></i> Previous</a>
-                <a class="page-numbers" href="#.">1</a>
-                <span class="page-numbers current">2</span>
-                <a class="page-numbers" href="#.">3</a>
-                <a class="page-numbers" href="#.">4</a>
-                <a class="next page-numbers" href="#.">Next <i class="fa fa-long-arrow-right"></i></a>
+                <span [ngClass]="i==currentPage? 'current':''"
+                class="page-numbers current"
+                *ngFor="let p of pages; let i=index"
+                (click)="onPageProduct(i)">
+                    {{i+1}}
+                </span>
             </div>
         </nav>
     </div>
     <div class="col-md-3 col-md-pull-9">
         <aside id="secondary" class="sidebar widget-area" data-accordion-group>
-            <div class="widget widget_related_search open" data-accordion>
-                <h4 class="widget-title" data-control>Related Searches</h4>
-                <div data-content>
-                    <div data-accordion>
-                        <h5 class="widget-sub-title1" data-control>Subject <i class="fa fa-angle-down" aria-hidden="true"></i></h5>
-                        <div class="widget_categories" data-content>
-                            <ul>
-                                <li><a href="#">Love stories <span>(18)</span></a></li>
-                                <li><a href="#">Texas <span>(04)</span></a></li>
-                                <li><a href="#">Rich people <span>(03)</span></a></li>
-                                <li><a href="#">Humorous stories <span>(02)</span></a></li>
-                                <li><a href="#">Widows <span>(02)</span></a></li>
-                                <li><a href="#">Women <span>(11)</span></a></li>
-                                <li><a href="#">Babysitters <span>(25)</span></a></li>
-                                <li><a href="#">Law firms <span>(09)</span></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div data-accordion>
-                        <h5 class="widget-sub-title1" data-control>Authors <i class="fa fa-angle-down" aria-hidden="true"></i></h5>
-                        <div class="widget_categories" data-content>
-                            <ul>
-                                <li><a href="#">Love stories <span>(18)</span></a></li>
-                                <li><a href="#">Texas <span>(04)</span></a></li>
-                                <li><a href="#">Rich people <span>(03)</span></a></li>
-                                <li><a href="#">Humorous stories <span>(02)</span></a></li>
-                                <li><a href="#">Widows <span>(02)</span></a></li>
-                                <li><a href="#">Women <span>(11)</span></a></li>
-                                <li><a href="#">Babysitters <span>(25)</span></a></li>
-                                <li><a href="#">Law firms <span>(09)</span></a></li>
-                            </ul>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
             <div class="widget widget_recent_releases">
                 <h4 class="widget-title">Categories</h4>
-                <ul>
-                    <li><a href="#">Drama</a></li>
-                    <li><a href="#">Romance</a></li>
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">HSorror</a></li>
+                <ul *ngIf="Categories">
+                    <li *ngFor="let cat of Categories"><a (click)="onGetlivres(cat)">{{cat.title}}</a></li>
                 </ul>
                 <div class="clearfix"></div>
             </div>
