--- a/Front-End-User/src/app/book-list/book-list.component.scss
+++ b/Front-End-User/src/app/book-list/book-list.component.scss
@@ -49,3 +49,7 @@
 .filter-options .select-styled {
     padding: 13px 10px 13px;
 }
+.post-thumbnail{
+    display: inline-block;
+    margin: 0 4% 0 0 !important;
+}
