--- a/Front-End-User/src/app/book-list/book-list.component.html
+++ b/Front-End-User/src/app/book-list/book-list.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="books-list" *ngIf="livres">
             <article *ngFor="let l of livres.content" >
-                <div class="single-book-box" *ngIf="l.category.id_category == currentCategorie.id_category && l?.available == 1 let empty='' ; else let empty='yes'">
+                <div class="single-book-box" *ngIf="l.available == 1">
                     <div class="post-thumbnail col-md-5" >
                         <!-- <div class="book-list-icon yellow-icon"></div> -->
                         <a href="#">
