update for book-list v.0.1

--- a/Front-End-User/src/app/book-list/book-list.component.html
+++ b/Front-End-User/src/app/book-list/book-list.component.html
@@ -74,7 +74,7 @@
             <div class="widget widget_recent_releases">
                 <h4 class="widget-title">Categories</h4>
                 <ul *ngIf="Categories">
-                    <li *ngFor="let cat of Categories"><a (click)="onGetlivres(cat)">{{cat.title}}</a></li>
+                    <li *ngFor="let cat of Categories" ><a [ngClass]="{'active-cat': cat == currentCategorie}" (click)="onGetlivres(cat)" >{{cat.title}}</a></li>
                 </ul>
                 <div class="clearfix"></div>
             </div>
