--- a/Front-End-Admin/src/app/app.component.html
+++ b/Front-End-Admin/src/app/app.component.html
@@ -1,279 +1,7 @@
-<style>
-	.filter{
-		height: 60px !important;
-	}
-	.filter-button{
-		font-size: 18px;
-	}
-	.pagination{
-		margin-left: 220px !important;
-		margin-top: -8px;
-	}
-	.th-table-livre{
-		height: 50px;
-		font-size: 20px;
-	}
-	.img-circle{
-		height:100px;width:100px;
-	}
-	.td-table{
-		font-size: 20px;
-	}
-	.table-striped{
-		background-color: white;
-	}
-	.input-livre{
-		width: 100%;
-
-	}
-	.input-livre-img{
-		margin-left: 14px !important;
-		width:71%;
-	}
-
-	.modal-body{
-		margin-top: -4px;
-	}
-	.modal-header{
-		margin-top: -30px;
-	}
-	.modal-footer{
-		margin-top: -27px;
-	}
-	.modal-x{
-		font-size: 30px;
-	}
-	.select-disponible{
-		height: 33px;
-		width: 570px;
-	 	border-radius: 8px;
-	 	width: 100%;
-	}
-	.icons{
-		font-size: 26px !important;
-	}
-	.big-links-menu{
-		font-size: 15px
-	}
-</style>
-
-<div
-  class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
-  <div class="app-header header-shadow">
-    <div class="app-header__logo">
-      <div class="logo-src"></div>
-      <div class="header__pane ml-auto">
-        <div>
-          <button type="button" id="myBtn"
-                  class="hamburger close-sidebar-btn hamburger--elastic"
-                  data-class="closed-sidebar">
-							<span class="hamburger-box"> <span class="hamburger-inner"></span>
-							</span>
-          </button>
-        </div>
-      </div>
-    </div>
-    <div class="app-header__mobile-menu">
-      <div>
-        <button type="button"
-                class="hamburger hamburger--elastic mobile-toggle-nav">
-						<span class="hamburger-box"> <span class="hamburger-inner"></span>
-						</span>
-        </button>
-      </div>
-    </div>
-    <div class="app-header__menu">
-				<span>
-					<button type="button"
-                  class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-						<span class="btn-icon-wrapper"> <i
-              class="fa fa-ellipsis-v fa-w-6"></i>
-						</span>
-					</button>
-				</span>
-    </div>
-    <div class="app-header__content">
-      <div class="app-header-right">
-        <div class="header-btn-lg pr-0">
-          <div class="widget-content p-0">
-            <div class="widget-content-wrapper">
-              <div class="widget-content-left">
-                <div class="btn-group">
-                  <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
-                    <img width="42" class="rounded-circle" src="assets/images/avatars/1.jpg" alt="">
-                    <i class="fa fa-angle-down ml-2 opacity-8"></i>
-                  </a>
-                  <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
-                    <button type="button" tabindex="0" class="dropdown-item">Login</button>
-                    <button type="button" tabindex="0" class="dropdown-item">Log out</button>
-                  </div>
-                </div>
-
-
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="app-main">
-    <div class="app-sidebar sidebar-shadow">
-      <div class="app-header__logo">
-        <div class="logo-src"></div>
-        <div class="header__pane ml-auto">
-          <div>
-            <button type="button"
-                    class="hamburger close-sidebar-btn hamburger--elastic"
-                    data-class="closed-sidebar">
-								<span class="hamburger-box"> <span
-                  class="hamburger-inner"></span>
-								</span>
-            </button>
-          </div>
-        </div>
-      </div>
-      <div class="app-header__mobile-menu">
-        <div>
-          <button type="button"
-                  class="hamburger hamburger--elastic mobile-toggle-nav">
-							<span class="hamburger-box"> <span class="hamburger-inner"></span>
-							</span>
-          </button>
-        </div>
-      </div>
-      <div class="app-header__menu">
-					<span>
-						<button type="button"
-                    class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-							<span class="btn-icon-wrapper"> <i
-                class="fa fa-ellipsis-v fa-w-6"></i>
-							</span>
-						</button>
-					</span>
-      </div>
-      <div class="scrollbar-sidebar">
-        <div class="app-sidebar__inner">
-          <ul class="vertical-nav-menu">
-            <li class="app-sidebar__heading big-links-menu">Operations</li>
-            <li>
-              <a>
-                <i class="metismenu-icon pe-7s-anchor icons">
-                </i>Emprunt
-              </a>
-              <ul>
-                <li>
-                  <a [routerLink]="['/emprunts']">
-                    <i class="metismenu-icon">
-                    </i>Effectuer Un Emprunt
-                  </a>
-                </li>
-                <li>
-                  <a [routerLink]="['/listEmprunts']">
-                    <i class="metismenu-icon">
-                    </i>Liste des Emprunts
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a>
-                <i class="metismenu-icon pe-7s-paper-plane icons">
-                </i>Réservation
-              </a>
-              <ul>
-                <li>
-                  <a>
-                    <i class="metismenu-icon">
-                    </i>Effectuer Une Reservation
-                  </a>
-                </li>
-                <li>
-                  <a >
-                    <i class="metismenu-icon">
-                    </i>Liste des Reservation
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li class="app-sidebar__heading big-links-menu">Ressources</li>
-            <li>
-              <a  [routerLink]="['/livres']">
-                <i class="metismenu-icon pe-7s-note2 icons">
-                </i> Livres
-              </a>
-            </li>
-            <li>
-              <a [routerLink]="['/categories']">
-                <i class="metismenu-icon pe-7s-wallet icons">
-                </i> Catégories
-              </a>
-            </li>
-            <li class="app-sidebar__heading big-links-menu">Comptes</li>
-            <li>
-              <a [routerLink]="['/profils']">
-                <i class="metismenu-icon pe-7s-users icons">
-                </i> Profils
-              </a>
-            </li>
-            <li>
-              <a >
-                <i class="metismenu-icon pe-7s-add-user icons">
-                </i> Demandes
-              </a>
-            </li>
-            <li>
-              <a >
-                <i class="metismenu-icon pe-7s-less icons">
-                </i> BlackList
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-  </div>
-  <div id="app-container">
+<div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
+  <app-header></app-header>
+  <div class="app-main" style="z-index: auto;">
+    <app-menu></app-menu>
     <router-outlet></router-outlet>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
