--- a/Front-End-Admin/src/app/livre/livre.component.css
+++ b/Front-End-Admin/src/app/livre/livre.component.css
@@ -1,26 +1,20 @@
+
+	.btn-ajouter-livre{
+		color:white !important;
+	}
 	.filter{
 		height: 60px !important;
-		margin-top: -40px;
 	}
-
+	.filter-button{
+		font-size: 18px;
+	}
 	.pagination{
 		margin-left: 220px !important;
-		margin-top: -13px;
+		margin-top: -8px;
 	}
-
 	.th-table-livre{
 		height: 50px;
 		font-size: 20px;
-	}
-	.circle-img{
-		height:70px;width:70px;
-	}
-	.td-table{
-		font-size: 16px;
-	}
-	.table-striped{
-		background-color: white;
-		margin-top: 10px;
 	}
 	.input-livre{
 		width: 100%;
@@ -30,50 +24,27 @@
 		margin-left: 14px !important;
 		width:71%;
 	}
+	.img-circle{
+		height:100px;width:100px;
+	}
+	.table-striped{
+		background-color: white;
+	}
+	.input-livre{
+		width: 100%;
 
-	.modal-body{
-		margin-top: -4px;
 	}
-	.modal-header{
-		margin-top: -30px;
-	}
-	.modal-footer{
-		margin-top: -10px !important;
-	}
+
 	.modal-x{
 		font-size: 30px;
 	}
 	.select-disponible{
 		height: 33px;
-		width: 570px;
+		width: 570px; 
 	 	border-radius: 8px;
 	 	width: 100%;
 	}
-	.icons{
-		font-size: 26px !important;
-	}
-	.big-links-menu{
-		font-size: 15px
-	}
-	.input-group{
-		width: 50%;
-	}
-	.btn-ajouter-livre{
-		color:white !important;
-		width: 15%;
-		margin-top: 13px;
-		margin-left: 10px;
-	}
-
-  th{color:orange;}
-	.card{
-		height: 60px;
-	}
-  .app-main__outer{
-    margin-top: -770px !important;
-    margin-left: 235px;
-  }
-  .css-btn
+	.css-btn
     {
               display: inline;
               /* width:50px !important;
@@ -81,13 +52,13 @@
               margin:5px !important;
     }
 
-.clickable{
-  cursor: pointer;
-}
+	.clickable{
+	cursor: pointer;
+	}
 
-.activeUp{
-	display: block;
-}
-.unactiveUp{
-	display: hidden;
-}
+	.activeUp{
+		display: block;
+	}
+	.unactiveUp{
+		display: hidden;
+	}
