--- a/Front-End-Admin/src/app/compte/compte.component.html
+++ b/Front-End-Admin/src/app/compte/compte.component.html
@@ -4,11 +4,15 @@
             <div class="page-title-wrapper">
                 <div class="page-title-heading">
                     <div class="page-title-icon">
-                        <i class="pe-7s-radio icon-gradient bg-strong-bliss">
+                        <i class="pe-7s-wallet icon-gradient bg-plum-plate">
                         </i>
                     </div>
-                    <div>Gestion des demandes
-                        <div class="page-title-subheading">Add scrolling areas to any elements with custom scrollbars or default browser ones.
+                    <div>Liste des demandes d'inscription
+                        <div class="page-title-subheading">
+                            <button class="btn btn-link" (click)="touAfficher()">Tout Afficher<span class="badge badge-pill badge-primary">6</span></button>
+                            <button class="btn btn-link">Cette Annee<span class="badge badge-pill badge-success">6</span></button>
+                            <button class="btn btn-link">Ce Mois-ci<span class="badge badge-pill badge-danger">6</span></button>
+                            <button class="btn btn-link" (click)="touAfficher()">Ajourd'hui<span class="badge badge-pill badge-warning">6</span></button>
                         </div>
                     </div>
                 </div>
@@ -16,7 +20,7 @@
         </div>  
         <div class="row">
             <div class="card-body">
-                <div class="col-md-12">
+                <!-- <div class="col-md-12">
                     <div id="accordion" class="accordion-wrapper mb-3">
                         <div class="card">
                             <div id="headingOne" class="card-header">
@@ -43,84 +47,43 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-md-12">
                     <table class="mb-0 table table-hover" style="background-color: white;">
                         <thead>
                         <tr>
-                            <th>Code</th>
-                            <th>Nom du Profil</th>
-                            <th>Date de Création</th>
-                            <th>Livres Empruntés</th>
-                            <th>Livres Réservés</th>
+                            <th>#</th>
+                            <th>Nom</th>
+                            <th>Prenom</th>
+                            <th>Adresse mail </th>
+                            <th>Date de la Demande</th>
+                            <th class="text-center">Accepter</th>
+                            <th class="text-center">Refuser</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>11-12-2015</td>
-                            <td>1</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>11-12-2015</td>
-                            <td>2</td>
-                            <td>3</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Larry</td>
-                            <td>11-12-2015</td>
-                            <td>-</td>
-                            <td>5</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">4</th>
-                            <td>Ford</td>
-                            <td>01-02-2014</td>
-                            <td>3</td>
-                            <td>5</td>
-                        </tr>	
-                        <tr>
-                            <th scope="row">5</th>
-                            <td>Harry</td>
-                            <td>11-06-2011</td>
-                            <td data-toggle="modal" data-target="#exampleModal">1</td>
-                            <td>3</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">6</th>
-                            <td>Gold</td>
-                            <td>10-07-2011</td>
-                            <td data-toggle="modal" data-target="#exampleModal">3</td>
-                            <td>-</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">7</th>
-                            <td>Chris</td>
-                            <td>11-11-2012</td>
-                            <td data-toggle="modal" data-target="#exampleModal">1</td>
-                            <td>2</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">8</th>
-                            <td>Chris</td>
-                            <td>11-11-2012</td>
-                            <td data-toggle="modal" data-target="#exampleModal">1</td>
-                            <td>2</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">9</th>
-                            <td>Cat</td>
-                            <td>03-07-2012</td>
-                            <td data-toggle="modal" data-target="#exampleModal">3</td>
-                            <td>-</td>
+                        <tr *ngFor="let d of demandes._embedded.demandes; let i = index">
+                            <th scope="row">{{1+i}}</th>
+                            <td>{{ d.first_name}}</td>
+                            <td>{{ d.last_name }}</td>
+                            <td>{{ d.mail }}</td>
+                            <td>{{ d.date }}</td>
+                            <td class="text-center">
+                                <button class="mr-2 btn-icon btn-icon-only btn btn-outline-success"><i class="pe-7s-check btn-icon-wrapper"> </i></button>
+                            </td>
+                            <td class="text-center">
+                                <button class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
+                            </td>
                         </tr>
                         </tbody>
-                    </table>                           	
+                    </table> <br><br>
+                    <div class="text-center pagination">
+                      <ul  class="pagination" *ngIf="allPage">
+                        <li [ngClass]="i==currentPage? 'active':''" *ngFor="let p of pages; let i=index"  class="clickable">
+                          <a (click)="onPageProduct(i)"> {{i+1}}</a>
+                        </li>
+                      </ul>
+                    </div>                           	
                 </div>
             </div>
         </div>
