--- a/Front-End-User/src/app/book-details/book-details.component.scss
+++ b/Front-End-User/src/app/book-details/book-details.component.scss
@@ -98,5 +98,5 @@ table {
     -moz-box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.07);
     box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.07);
     display: inline-block;
-
 }
+.classWithPad { margin:3%; padding:3%; }
